added GPSG slides

--- a/formgram-gb.tex
+++ b/formgram-gb.tex
@@ -13,7 +13,7 @@
 \begin{itemize}
 \item Introduction and basic terms
 \item Phrase structure grammar
-\item Government \& Binding (GB)
+\item \alert{Government \& Binding (GB)}
 \item Generalized Phrase Structure Grammar (GPSG)
 \item Lexical Functional Grammar (LFG)
 %\item PATR
@@ -362,7 +362,7 @@ Sometimes also \emph{e} for empty element and \emph{t} for trace.
 \frame[label=pf]{
 \frametitle{The T-model: Phonetic Form}
 
-PF is the phonetic form of a sentence, the string of phonemes that are actually pronounced. 
+PF is the phonetic form of a sentence, the string of phonemes actually pronounced. 
 
 The mapping from S Structure to PF incorporates the phonological laws.
 
