--- a/formgram-gb3.tex
+++ b/formgram-gb3.tex
@@ -442,11 +442,11 @@ That is: nothing has to be moved.
 
 \subsection{Local reordering}
 
-\frame[shrink]{
+\frame[shrink=20]{
 \frametitle{Local reordering}
 
 The arguments of verbs can appear in any order in German.\\
-So for verbs with three arguments there are six possible orders for the arguments:
+So for verbs with three arguments, there are six possible orders for the arguments:
 
 \eal
 \label{ex-gb-umstellung}
@@ -471,7 +471,9 @@ So for verbs with three arguments there are six possible orders for the argument
      \spacebr{}because the child the book the man gives\\
 \zl
 
-
+(\mex{0}a) is the so-called \alert{unmarked order} \citep{Hoehle82a}.\\
+The number of contexts in which
+sentences can be used is restricted for all other sentences in (\mex{0}).
 
 }
 
