--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -40,6 +40,11 @@
 \usepackage{tabularx}
 %\usepackage{ogonek}        % For Ewa Dabrowska
 
+\newcommand{\nom}{\NOM}
+\newcommand{\gen}{\GEN}
+\newcommand{\dat}{\DAT}
+\newcommand{\acc}{\ACC}
+
 
 %\usepackage{soul}
 
@@ -96,7 +101,7 @@ St.Mueller@hu-berlin.de}
 \include{formgram-gb2}
 \exewidth{(235)}
 \include{formgram-gb3}
-% \include{formgram-gpsg}
+\include{formgram-gpsg}
 % \include{hpsg-formalismus}
 % \include{formgram-lfg}
 % % \include{formgram-lmt}
