--- a/check-formgram.tex
+++ b/check-formgram.tex
@@ -65,8 +65,9 @@
 %\includeonly{formgram-xbar}
 %\includeonly{formgram-gb}
 %\includeonly{formgram-gb2}
-\includeonly{formgram-gb3}
+%\includeonly{formgram-gb3}
 
+\includeonly{formgram-gpsg}
 
 \input formgram-include.tex
 
