--- a/formgram-gpsg.tex
+++ b/formgram-gpsg.tex
@@ -886,7 +886,7 @@ then bound off.
 
 }
 
-\subsubsubsection{Partial fronting}
+\subsubsubsection{Partial fronting (I)}
 
 \frame{
 \frametitle{Partial fronting}
@@ -910,7 +910,7 @@ Arguments not realized in the fronted VP have to be realized in the \mf.
 }
 
 \frame[shrink]{
-\frametitle{Partial fronting}
+\frametitle{Partial fronting (II)}
 
 \begin{itemize}
 \item Arguments missing in initial position have to be realized in the \mf. The case in the \mf has to
