--- a/formgram-gb.tex
+++ b/formgram-gb.tex
@@ -12,9 +12,10 @@
 
 \begin{itemize}
 \item Introduction and basic terms
-\item Phrase structure grammar
+\item Phrase structure grammar and \xbar Theory
 \item \alert{Government \& Binding (GB)}
 \item Generalized Phrase Structure Grammar (GPSG)
+\item {Feature descriptions, feature structures and models}
 \item Lexical Functional Grammar (LFG)
 %\item PATR
 \item Categorial Grammar (CG)
@@ -26,6 +27,9 @@
 %\tableofcontents
 }
 
+
+\subsection{General remarks on the representational format}
+
 \frame{
 \frametitle{Reading material}
 
@@ -33,8 +37,6 @@
 
 
 }
-
-\subsection{General remarks on the representational format}
 
 \subsubsection{History and motivation}
 
@@ -706,7 +708,7 @@ Lexical categories:
 
 \frame{
 \frametitle{\xbar Theory: Lexical categories (cross classification)}
-%\label{slide-lex-kat-gb}%
+\label{slide-lex-kat-gb}%
 
 Attempt to use binary features to cross-classify lexical categories:
 
