--- a/formgram-gpsg.tex
+++ b/formgram-gpsg.tex
@@ -14,9 +14,10 @@
 
 \begin{itemize}
 \item Introduction and basic terms
-\item Phrase structure grammar
+\item Phrase structure grammar and \xbar Theory
 \item Government \& Binding (GB)
 \item \alert{Generalized Phrase Structure Grammar (GPSG)}
+\item {Feature descriptions, feature structures and models}
 \item Lexical Functional Grammar (LFG)
 %\item PATR
 \item Categorial Grammar (CG)
@@ -26,6 +27,14 @@
 \end{itemize}
 
 %\tableofcontents
+}
+
+\frame{
+\frametitle{Reading material}
+
+\citew[Cahpter~5]{MuellerGT-Eng} with Section~5.1.4 about semantics.
+
+
 }
 
 \frame{
