--- a/formgram-handout-en.tex
+++ b/formgram-handout-en.tex
@@ -38,7 +38,7 @@
 \logo{}
 
 
-\newtoggle{loesungen}\togglefalse{loesungen}
+\newtoggle{loesungen}\toggletrue{loesungen}
 
 \usepackage{comment}
 \includecomment{handout}
