--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -102,7 +102,7 @@ St.Mueller@hu-berlin.de}
 \exewidth{(235)}
 \include{formgram-gb3}
 \include{formgram-gpsg}
-% \include{hpsg-formalismus}
+\include{formgram-feature-descriptions}
 % \include{formgram-lfg}
 % % \include{formgram-lmt}
 % \include{formgram-cg}
