--- a/formgram-psg.tex
+++ b/formgram-psg.tex
@@ -7,6 +7,25 @@
 \huberlintitlepage[22pt]
 
 
+\outline{
+
+\begin{itemize}
+\item Introduction and basic terms
+\item \alert{Phrase structure grammar and \xbar Theory}
+\item Government \& Binding (GB)
+\item {Generalized Phrase Structure Grammar (GPSG)}
+\item {Feature descriptions, feature structures and models}
+\item Lexical Functional Grammar (LFG)
+%\item PATR
+\item Categorial Grammar (CG)
+\item Head-Driven Phrase Structure Grammar (HPSG)
+%\item Konstruktionsgrammatik (CxG)
+\item Tree Adjoning Grammar (TAG)
+\end{itemize}
+
+%\tableofcontents
+}
+
 
 
 \subsection{Symbols and rewrite rules}
