--- a/formgram-slides-en.tex
+++ b/formgram-slides-en.tex
@@ -26,6 +26,8 @@
 
 \documentclass[xcolor=dvipsnames,10pt]{beamer}
 
+%\usepackage{german}\selectlanguage{USenglish}
+
 \usepackage{hu-beamer-includes-pdflatex,beamer-movement}
 
 \usepackage{pstricks}
@@ -34,7 +36,7 @@
 \usepackage{comment}
 \includecomment{completed}
 \excludecomment{handout}
-\newtoggle{loesungen}\togglefalse{loesungen}
+\newtoggle{loesungen}\toggletrue{loesungen}
 \excludecomment{backup}
 
 
